<resources>

    <string name="app_name" translatable="false">Log Cat</string>
    <string name="version_name" translatable="false">2.3</string>
    
<!--Strings for opthins menu-->
	<string name="option_menu_clear_log" translatable="false">Clear log</string>
	<string name= "option_menu_refresh_log" translatable="false">Refresh log</string>
	<string name= "option_menu_save_to_sd_card" translatable="false">Save to SD card</string>
	<string name="option_menu_manage_logs" translatable="false">Manage logs</string>
	<string name="option_menu_settings" translatable="false">Settings</string>
	<string name="option_menu_exit" translatable="false">Exit</string>
	<string name="option_menu_clear_screen" translatable="false">Clear screen</string>
	<string name="options_menu_about_app" translatable="false">About</string>
	<!-- Alert Diialog file save -->
	
	<string name="alert_dialogSaveFileTitle" translatable="false">Save File</string>
	<string name="alert_dialogSaveFileMessage" translatable="false">What would you like to name the file?</string>
	<string name="alert_dialogSaveFileEmptyTextBox" translatable="false">No file was saved because a file name was not given.</string>
		<!-- Alert Dialog file delete -->
	<string name="alert_dialog_title_Confirmation" translatable="false">Confirmation</string>
	<string name="alert_dialog_file_button_cancel" translatable="false">Cancel</string>
	<string name="alert_dialog_file_button_Confirm" translatable="false">Confirm</string>
	<string name="alert_dialog_delete_a_log_message" translatable="false">Are you sure you want to delete this log?</string>
	<string name="alert_dialog_delete_all_logs_message" translatable="false">Are you sure you want to delete all log files?</string>
	<string name="alert_dialog_clear_log_device_message" translatable="false">Are you sure you want to clear the log device?</string>
	<!-- Log-Manager-UI-Layout -->
	<string name="logmanagerheadermessage" translatable="false">\tTo open a log for viewing, tap once.\nTo delete a log from the SD-card, long press on a log and press confirm.</string>
	<!-- Log-Manager-Menu-Items -->
	<string name="LogManagerMenuDeleteAllFiles" translatable="false">Delete All Logs</string>
	
	<!-- User Agreement Dialog -->
	<string name="user_agreement_dialog_i_understand" translatable="false">I understand.</string>
	<string name="user_agreement_dialog_ok_button" translatable="false">OK</string>
	<string name="user_agreement_dialog_calcel_button" translatable="false">Cancel</string>
	
	<!-- Progress Dialog -->
	<string name="progress_dialog_title_loading" translatable="false">Loading</string>
	<string name="progress_dialog_message_logcat_load" translatable="false">Getting your log cat data</string>
	<string name="progress_dialog_message_clear_device" translatable="false">Clearing log cat device</string>
	
	<!-- Toast messages -->
	<string name="ToastMesgOperationCanceled" translatable="false">Operation canceled.</string>
	<string name="ToastMessageLogCleared" translatable="false">Log device cleared.</string>
</resources>
