<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false" >

        <TextView
            android:id="@+id/version_check_dialog_message_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="@color/bluedark_50"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/version_check_dialog_agreecheckbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement_dialog_i_understand" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/version_check_ok_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/user_agreement_dialog_ok_button" />

        <Button
            android:id="@+id/version_check_cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/user_agreement_dialog_calcel_button" />
    </LinearLayout>

</LinearLayout>